--- a/src/css/style_desktop.css
+++ b/src/css/style_desktop.css
@@ -12,6 +12,10 @@
         font-size: 8rem;
     }
 
+    h3 {
+        font-size: 3.5rem;
+    }
+
     .margins {
         padding-left: 30px;
         padding-right: 30px;
@@ -36,4 +40,57 @@
         padding: 5px;
         width: 25px;
     }
+
+    .flex_index {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .flex_login {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        wrap-option: wrap;
+    }
+
+    .flex_signup {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        wrap-option: wrap;
+    }
+
+    .input_box {
+        font-size: 3rem;
+        margin: 2rem;
+        width: 30rem;
+    }
+
+    .buttons {
+        background: #5E5DF0;
+        border-radius: 999px;
+        box-shadow: #5E5DF0 0 10px 20px -10px;
+        box-sizing: border-box;
+        color: #FFFFFF;
+        cursor: pointer;
+        font-size: 3rem;
+        font-weight: 700;
+        line-height: 4rem;
+        opacity: 1;
+        outline: 0 solid transparent;
+        padding: 8px 18px;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        width: fit-content;
+        word-break: break-word;
+        border: 0;
+    }
+
+    .buttons:hover {
+        background: #FFFFFF;
+        color: #5E5DF0;
+    }
+
 }
