--- a/src/css/style_mobile.css
+++ b/src/css/style_mobile.css
@@ -43,6 +43,10 @@ a {
         font-size: 8rem;
     }
 
+    h3 {
+        font-size: 2.5rem;
+    }
+
     .flex_header {
         display: flex;
         flex-direction: column;
@@ -78,6 +82,37 @@ a {
 
     .flex_signup {
         display: flex;
+        flex-direction: column;
+        align-items: center;
+        wrap-option: wrap;
+    }
+
+    .input_box {
+        font-size: 3rem;
+        margin-bottom: 3rem;
+        width: 30rem;
+    }
+
+    .buttons {
+       background: #5E5DF0;
+       border-radius: 999px;
+       box-shadow: #5E5DF0 0 10px 20px -10px;
+       box-sizing: border-box;
+       color: #FFFFFF;
+       font-size: 3rem;
+       font-weight: 700;
+       line-height: 4rem;
+       opacity: 1;
+       outline: 0 solid transparent;
+       padding: 8px 18px;
+       user-select: none;
+       touch-action: manipulation;
+       border: 0;
+    }
+
+    .buttons:hover {
+        background: #FFFFFF;
+        color: #5E5DF0;
     }
 
 }
