--- a/src/css/style_desktop.css
+++ b/src/css/style_desktop.css
@@ -25,8 +25,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        background-color: #1f9898;
-        color: white;
+        background-color: rgb(21, 54, 96);
         justify-content: space-between;
     }
 
@@ -35,10 +34,16 @@
     }
 
     .flex_header div nav a img {
-        background: #a6d7d7;
+        background: #bfdafa;
         border-radius: 80px;
         padding: 5px;
         width: 25px;
+    }
+
+    .flex_header div nav a img:hover {
+        -webkit-border-radius: 50px;
+        -moz-border-radius: 50px;
+        border-radius: 9px;
     }
 
     .flex_index {
