--- a/src/css/style_desktop.css
+++ b/src/css/style_desktop.css
@@ -16,6 +16,16 @@
         font-size: 3.5rem;
     }
 
+    h4 {
+        font-size: 2rem;
+        color: white;
+    }
+
+    h5 {
+        font-size: 1.5rem;
+        color: white;
+    }
+
     .margins {
         padding-left: 30px;
         padding-right: 30px;
@@ -96,6 +106,35 @@
     .buttons:hover {
         background: #FFFFFF;
         color: #5E5DF0;
+    }
+
+    footer {
+        background: #0c2341;
+    }
+
+    .flex_footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .inlineNav div{
+        display: inline-block;
+        margin-right: 4rem;
+    }
+
+    .inlineNav div h4 {
+        margin-left: 9rem;
+        font-size: 2.5rem;
+    }
+
+    .inlineNav div nav a h5{
+        font-size: 2rem;
+    }
+
+    .inlineNav a:hover{
+        text-decoration: underline;
+        text-decoration-color: #0c2341;
     }
 
 }
