--- a/src/css/style_mobile.css
+++ b/src/css/style_mobile.css
@@ -47,6 +47,16 @@ a {
         font-size: 2.5rem;
     }
 
+    h4 {
+        font-size: 2rem;
+        color: white;
+    }
+
+    h5 {
+        font-size: 1.5rem;
+        color: white;
+    }
+
     .flex_header {
         display: flex;
         flex-direction: column;
@@ -124,6 +134,36 @@ a {
     .buttons:hover {
         background: #FFFFFF;
         color: #5E5DF0;
+    }
+
+    footer {
+        background: #0c2341;
+    }
+
+    .flex_footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .inlineNav div{
+        display: inline-block;
+        margin-right: 4rem;
+
+    }
+
+    .inlineNav div h4 {
+        margin-left: 9rem;
+    }
+
+    .inlineNav a{
+        color: lightgray;
+        text-decoration: none;
+    }
+
+    .inlineNav a:hover{
+        text-decoration: underline;
+        text-decoration-color: #0c2341;
     }
 
 }
