--- a/src/css/style_mobile.css
+++ b/src/css/style_mobile.css
@@ -94,7 +94,7 @@ a {
     }
 
     .backgroundImg{
-        background-image: url("./src/media/images/purple_background.jpg");
+        background-image: url("../media/images/purple_background.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
