--- a/src/css/style_mobile.css
+++ b/src/css/style_mobile.css
@@ -15,7 +15,7 @@ body {
 
 #mainTitle {
     color: #bfdafa;
-    text-shadow: 5px 5px 2px #395c8a, 10px 10px 3px #19457e, 35px 23px 12px #0d213a;
+    text-shadow: 3px 3px 2px #395c8a, 5px 5px 3px #19457e,20px 10px 15px #6784cc;
 }
 
 main {
@@ -31,6 +31,11 @@ a {
 }
 
 @media (max-device-width: 420px) {
+
+    .margins {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
 
     html {
         font-size: 15px;
@@ -62,7 +67,7 @@ a {
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-color: rgb(21, 54, 96);
+        background-color: rgb(29, 38, 84);
         padding-bottom: 3rem;
     }
 
@@ -104,23 +109,16 @@ a {
         wrap-option: wrap;
     }
 
-    .input_box {
+    .input_box input{
         font-size: 3rem;
         margin-bottom: 3rem;
         width: 30rem;
         box-shadow:5px 5px 10px rgba(48, 68, 94, 0.35);
-        border-radius: 20px;
-    }
-
-    input[type=text] {
+        border-radius: 10px;
         padding-left: 20px;
     }
 
-    input[type=email] {
-        padding-left: 20px;
-    }
-
-    input[type=password] {
+    .indexInput {
         padding-left: 20px;
     }
 
@@ -169,7 +167,7 @@ a {
     }
 
     footer {
-        background: #0c2341;
+        background: #1d2654;
     }
 
     .flex_footer {
@@ -178,7 +176,7 @@ a {
         align-items: center;
     }
 
-    .inlineNav div {
+    .inlineNav div{
         display: inline-block;
         margin-right: 4rem;
 
@@ -242,8 +240,23 @@ a {
         border-radius: 50rem;
     }
 
-    .logout_profile {
-        color: darkred;
+    .searchBox {
+        width: 500px;
+        box-sizing: border-box;
+        border: 3px solid #395c8a;
+        border-radius: 4px;
+        background-color: white;
+        background-image: url('../media/images/icons/search_icon.png');
+        background-position: 2px;
+        background-size: 80px;
+        background-repeat: no-repeat;
+        padding: 30px 40px 30px 80px;
+        transition: width 0.5s ease-in-out;
+        font-size: 2.2rem;
+    }
+
+    .searchBox:focus {
+        width: 700px;
     }
 
 }
