--- a/src/css/style_mobile.css
+++ b/src/css/style_mobile.css
@@ -270,5 +270,61 @@ a {
         width: 700px;
     }
 
+    .searchImage {
+        width: 90%;
+        height: auto;
+    }
+
+    .profile_round {
+        border-radius: 50rem;
+        width: 20rem;
+    }
+
+    .logout_profile {
+        color: darkred;
+        padding: 1rem;
+    }
+
+    .logout_profile:hover {
+        color: whitesmoke;
+        background-color: darkred;
+        padding: 1rem;
+        border-radius: 50rem;
+    }
+
+    .div_inline {
+        display: inline-block;
+        padding: 20px;
+    }
+
+    .flex_profile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .flex_profile_info {
+        width: 50rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .profile_info_theme h3 {
+        padding: 1.2rem;
+    }
+
+    .profile_info_theme_input h3 {
+        color: #0c2341;
+        border: solid 0.2rem #5b5a5a;
+        padding: 1rem;
+        border-radius: 1rem;
+        font-weight: unset;
+    }
+
+    .edit_profile_link {
+        color: black;
+    }
+
 
 }
