--- a/src/css/style_mobile.css
+++ b/src/css/style_mobile.css
@@ -8,18 +8,20 @@ body {
 }
 
 * {
-    font-family: "Candara Light", sans-serif;
-    font-weight: bold;
-    line-height: 1.5em;
+    font-family: "Lucida Sans", sans-serif ;
+    font-weight: lighter;
+    line-height: 1em;
 }
 
 #mainTitle {
-    color: #bfdafa;
-    text-shadow: 3px 3px 2px #395c8a, 5px 5px 3px #19457e,20px 10px 15px #6784cc;
+    color: #D9E7FDFF;
+    font-family: "Lucida Sans", sans-serif;
+    font-weight: bolder;
+    letter-spacing: 0.05em;
+    text-shadow: 5px 3px 2px #3c5373, 6px 4px 5px #1e2538, 8px 5px 15px #ffffff;
 }
 
 a {
-    color: white;
     text-decoration: none;
 }
 
@@ -77,7 +79,7 @@ a {
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-color: rgb(29, 38, 84);
+        background-color: rgb(1, 25, 54);
         padding-bottom: 3rem;
     }
 
@@ -86,7 +88,7 @@ a {
     }
 
     .flex_header div nav a img {
-        background: #bfdafa;
+        background: rgb(217, 231, 253);
         border-radius: 80px;
         padding: 10px;
         width: 70px;
@@ -157,7 +159,7 @@ a {
     .buttonSignUp {
         background: rgb(168, 190, 218);
         border-radius: 999px;
-        box-shadow: rgb(168, 190, 218) 0 10px 20px -10px;
+        box-shadow: rgb(136, 156, 180) 0 10px 30px -10px;
         box-sizing: border-box;
         color: #15263a;
         font-size: 2.5rem;
@@ -172,12 +174,12 @@ a {
     }
 
     .buttonSignUp:hover {
-        background: rgb(21, 38, 58);
+        background: rgb(1, 25, 54);
         color: rgb(168, 190, 218);
     }
 
     footer {
-        background: #1d2654;
+        background: #011936;
     }
 
     .flex_footer {
@@ -210,9 +212,18 @@ a {
         display: flex;
         flex-direction: column;
         align-items: center;
-        color: #c6d6ea;
-        background: #0c2341;
-        max-width: content-box;
+        width: content-box;
+        color: rgb(208, 242, 255);
+        background: rgba(77, 76, 117, 0.82);
+        padding-top: 10px;
+        padding-bottom: 10px;
+        border-radius: 7px;
+        max-width: 50rem;
+        transition: transform 100ms, opacity 400ms;
+    }
+
+    .friendsHome::after{
+        transform: scale(1);
     }
 
     .bkgFriends {
@@ -243,7 +254,7 @@ a {
     }
 
     .home_title {
-        font-size: 5rem;
+        font-size: 4.5rem;
     }
 
     .profile_round {
@@ -397,4 +408,31 @@ a {
         color: darkred;
 
     }
+
+    .events_general_flex article{
+        display: flex;
+        flex-direction: row;
+        wrap-option: wrap;
+        justify-content: center;
+    }
+
+    .my_events_button a{
+        background: rgb(168, 190, 218);
+        border-radius: 20px;
+        box-shadow: rgb(136, 156, 180) 0 10px 30px -10px;
+        box-sizing: border-box;
+        color: #15263a;
+        font-size: 1rem;
+        opacity: 1;
+        outline: 0 solid transparent;
+        user-select: none;
+        touch-action: manipulation;
+        border: 0;
+    }
+
+    .categories_buttons{
+
+    }
+
+
 }
